--- a/Infra/InfraStarter/AppShell.xaml
+++ b/Infra/InfraStarter/AppShell.xaml
@@ -4,7 +4,14 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:InfraStarter"
+        xmlns:pages="clr-namespace:InfraStarter.Pages"
+
     Shell.FlyoutBehavior="Flyout">
+
+    <ShellContent
+        Title="Home"
+        ContentTemplate="{DataTemplate local:MainPage}"
+        Route="MainPage" />
 
     <FlyoutItem Title="Resources">
         <ShellContent
@@ -12,10 +19,13 @@
         ContentTemplate="{DataTemplate local:ResourcesPage}"
         Route="ResourcesPage" />
     </FlyoutItem>
-    
-    <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
-
+    <FlyoutItem Title="Settings">
+        <FlyoutItem.Icon>
+            <FontImageSource FontFamily="Mdi" Glyph="&#xF08BB;" Color="{AppThemeBinding Default={StaticResource Gray900}}" />
+        </FlyoutItem.Icon>
+        <ShellContent
+        Title="Settings"
+        ContentTemplate="{DataTemplate pages:SettingsPage}"
+        Route="SettingsPage" />
+    </FlyoutItem>
 </Shell>
